<resources>
    <string name="app_name">UAS 180030459</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="judul_lagu">Judul Lagu</string>
    <string name="nama_penyanyi">Nama Penyanyi</string>
    <string name="album">Album</string>
    <string name="tahun">Tahun</string>
    <string name="save">Simpan</string>
    <string name="add">Tambah Musik</string>
    <string name="edit">Edit Musik</string>
    <string name="delete">Hapus Musik</string>
    <string name="genre_kpop">K-Pop</string>
    <string name="genre_western">Western</string>
</resources>
