<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large_margin"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="APLIKASI MUSIC"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FD3F92"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/ic_music_pink_24dp"
        app:civ_border_color="#FD3F92"
        app:civ_border_width="5dp" />

    <EditText
        android:id="@+id/edit_judul_lagu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/judul_lagu"
        android:ems="10"
        android:hint="@string/judul_lagu"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_nama_penyanyi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/nama_penyanyi"
        android:ems="10"
        android:hint="@string/nama_penyanyi"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/album"
        android:ems="10"
        android:hint="@string/album"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_tahun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/tahun"
        android:ems="10"
        android:hint="@string/tahun"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Genre"
        android:layout_margin="10dp"
        android:textSize="14dp" />

    <RadioGroup
        android:id="@+id/rg_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/gen_kpop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/genre_kpop" />

        <RadioButton
            android:id="@+id/gen_western"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/genre_western" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:background="#FD3F92"/>


</LinearLayout>